# dashboard

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.scheduler  app.py  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  run.sh  test.py
.github/workflows/: Workflow.yaml
caddy/: Caddyfile  Dockerfile
models/: holidays.py
scheduler/: scheduler.py
scripts/: importand_days.py  scheduler.py
shared/: api_logic.py  crud_operations.py  schemas.py
shared/data/: holidays.json
shared/models/: holidays.py  register.py
shared/scripts/: alert.py  importand_days.py  scheduler.py
templates/: dashboard.html
