[project]
name = "dashboard"
version = "0.1.0"
description = "FastAPI Dashboard Application"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "jinja2>=3.1.6",
    "psutil>=7.2.2",
    "requests>=2.32.5",
    "python-dotenv>=1.2.1",
    "annotated-doc>=0.0.4",
]

[project.scripts]
dev = "uvicorn app:app --reload --host 0.0.0.0 --port 8000"
start = "python app.py"