[project]
name = "dashboard"
version = "0.1.0"
description = "FastAPI Dashboard Application"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "jinja2>=3.1.6",
    "psutil>=7.2.2",
    "requests>=2.32.5",
    "python-dotenv>=1.2.1",
    "annotated-doc>=0.0.4",
    "sqlalchemy>=2.0.46",
    "python-multipart>=0.0.22",
    "bcrypt>=5.0.0",
    "python-jose[cryptography]>=3.5.0",
    "email-validator>=2.3.0",
    "passlib>=1.7.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
